--- a/reddit-clone-part-2/app/public/index.html
+++ b/reddit-clone-part-2/app/public/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html ng-app="app">
+
+<head>
     <meta charset="utf-8">
     <title>Reddit Clone</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-  </head>
-  <body>
+    <base href="/">
+    <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/app.css">
+    <script src="/jquery/dist/jquery.min.js"></script>
+    <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="/angular/angular.min.js"></script>
+    <script src="/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script src="/moment/min/moment.min.js"></script>
+    <script src="/angular-moment/angular-moment.js"></script>
+    <script src="/js/app/app.module.js"></script>
+    <script src="/js/app/app.config.js"></script>
+    <script src="/js/app/app.component.js"></script>
+    <script src="/js/posts/post-list.component.js"></script>
+    <script src="/js/posts/post-edit.component.js"></script>
+</head>
 
-  </body>
+<body>
+
+    <app></app>
+
+
+
+</body>
+
 </html>
